20230427 15:10 to Fragment implementing

--- a/p1_lggram/app/build.gradle
+++ b/p1_lggram/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.p2'
+    namespace 'com.example.beomtaekim1'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.p2"
+        applicationId "com.example.beomtaekim1"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -17,8 +17,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    viewBinding{
-        enabled= true
+    viewBinding {
+        enabled = true
     }
 
     buildTypes {
