--- a/p1_lggram/app/src/main/AndroidManifest.xml
+++ b/p1_lggram/app/src/main/AndroidManifest.xml
@@ -10,26 +10,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.P2"
+        android:theme="@style/Theme.BeomtaeKim1"
         tools:targetApi="31">
+        <service
+            android:name=".Musicservice"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
-            android:name=".PhoneBookDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PhoneBookActivity"
-            android:exported="false" />
-        <activity
-            android:name=".FragmentAndAddviewActivity"
-            android:exported="false" />
-        <activity
-            android:name=".made_in_activity_code"
-            android:exported="false" />
-        <activity
-            android:name=".Sub2Activity"
-            android:exported="false" />
-        <activity
-            android:name=".CalculationActivity"
-            android:exported="false" />
+            android:name=".Activity_sub1"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
